# contents of a minimal pyproject.toml 

[build-system] 
requires = ["hatchling"] 
build-backend = "hatchling.build" 

[project] 
name = "example_package_iat2631" 
version = "0.1.0" 
dependencies = ["numpy"]

[project.optional-dependencies]
test = ["pytest"]

# pyproject.toml 
[project] 
dynamic = ["version"] 

[tool.hatch]
version.path = "src/example_package_YOUR_USERNAME_HERE/__init__.py"

